[project]
name = "jsonline"
version = "0.3.0"
description = "Jsonline is intend to use to explore and work with json lines files and avoid keep the entire data in memory or constantly read the whole file"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
authors = [
    {name = "fsadannn", email = "fsadannn@gmail.com"},
]
requires-python = ">=3.11"
dependencies = [
    "orjson>=3.11.1",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.16",
]

[build-system]
requires = ["uv_build>=0.8.7,<0.9.0"]
build-backend = "uv_build"
